# hearts

./: .gitignore
java-magazin-2019/: Dockerfile  README.md  hearts.cabal
java-magazin-2019/src/: AllStrategies.hs  Cards.hs  Game.hs  Gameplay.hs  Hearts.hs  M3915548.hs  M4108569.hs  M4307546.hs  M4336103.hs  M4337015.hs  M4349877.hs  M4719482.hs  M4721608.hs  M4724561.hs  M4925953.hs  M4930156.hs  M4951475.hs  M5006291.hs  M5108641.hs  M5154605.hs  M5164530.hs  M5172845.hs  M5252008.hs  Main.hs  MyStrategy.hs  Tournament.hs
