name:                hearts
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/funktionale-programmierung/hearts/
license:             BSD3
license-file:        LICENSE
author:              Peter Thiemann, Mike Sperber
maintainer:          peter.thiemann@gmail.com
copyright:           2018, 2021 Peter Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hearts
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Cards Game Shuffle Gameplay MyStrategy Tournament
                       M5108641 M5164530 M5006291 M4336103 M4721608 M4349877 M4925953
                       M4719482 M5172845 M3915548 M4108569 M4337015 M5252008 M4930156
                       M5154605 M4724561 M4307546 M4951475
                       AllStrategies
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random, transformers, mtl, containers, free, cond, split
                     , optparse-applicative